@@ -326,7 +326,6 @@ bool convMxM::mxmsolv(std::string dfiname,
                      m_param->Get_OutputFormat(),
                      outGc,
                      d_type,
-                     m_param->Get_OutputArrayShape(),
                      DFI_FInfo->Component,
                      "",
                      voxel,
